ERP Tuition Info configuration & improvement

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1154,13 +1154,89 @@ label.ExemptionsGenerationRequestFile.reason=Motivo
 label.ExemptionsGenerationRequestFile.debitEntry=Item de dívida
 label.ExemptionsGenerationRequestFile.discountAmount=Desconto aplicado
 
+# ERPTuitionInfoProduct
+label.ERPTuitionInfoProduct.title=Produtos de Especialização
+label.ERPTuitionInfoProduct.create.title=Criar Produto de Especialização
+label.ERPTuitionInfoProduct.update.title=Atualizar Produto de Especialização
+
+label.ERPTuitionInfoProduct.code=Código
+label.ERPTuitionInfoProduct.name=Designação
+
+label.ERPTuitionInfoProduct.delete.confirm=Deseja pagar o produto de especialização?
+
+error.ERPTuitionInfoProduct.cannot.delete=Não é possível remover o produto de especialização devido a configurações de especializações por ano lectivo.
+
 # ERPTuitionInfoType
-label.ERPTuitionInfoType.title=Especializações de propina
+label.ERPTuitionInfoType.title=Configurações de Especializações por Ano Lectivo
 label.ERPTuitionInfoType.code=Código
 label.ERPTuitionInfoType.name=Designação
 label.ERPTuitionInfoType.active=Activo
-label.ERPTuitionInfoType.degreeInformation=Aplicado aos cursos:
-label.ERPTuitionInfoType.tuitionProducts=Aplicado aos produtos
+label.ERPTuitionInfoType.degreeInformation=Cursos
+label.ERPTuitionInfoType.tuitionProducts=Produtos de propina
+label.ERPTuitionInfoType.executionYear=Ano Lectivo
+label.ERPTuitionInfoType.create=Criar
+label.ERPTuitionInfoType.create.title=Criar Configuração de Especialização
+label.ERPTuitionInfoType.update.title=Atualizar Configuração de Especialização
+label.ERPTuitionInfoType.tuitionProduct=Produto
+label.ERPTuitionInfoType.erpTuitionProduct=Produto de Especialização
+
+label.ERPTuitionInfoType.degreeInformation=Dados curriculares (cursos)
+label.ERPTuitionInfoType.tuitionProducts=Produtos finaceiros
+
+label.ERPTuitionInfoType.degreeType=Tipo de Curso
+
+label.ERPTuitionInfoType.degreeType.option=Tipo de Curso
+label.ERPTuitionInfoType.degree.option=Cursos
+label.ERPTuitionInfoType.degreeCurricularPlan.option=Planos curriculares
+label.ERPTuitionInfoType.degreeInformation.title=Dados curriculares
+
+label.ERPTuitionInfoType.degrees=Cursos
+label.ERPTuitionInfoType.degreeCurricularPlans=Planos Curriculares
+
+label.ERPTuitionInfoType.addDegreeInformation=Adicionar dado curricular 
+label.ERPTuitionInfoType.choose.option.to.add.degree.info=Para adicionar dados curriculares, selecione umas das opções.
+
+label.ERPTuitionInfoType.degreeDataSource.is.empty=Não há cursos definidos para o tipo de curso indicado.
+label.ERPTuitionInfoType.degreeCurricularPlanDataSource.is.empty=Não há planos curriculares definidos para o tipo de curso indicado.
+label.ERPTuitionInfoType.tuitionPaymentPlanGroup=Tipo de propina
+label.ERPTuitionInfoType.delete.confirm=Deseja remover a configuração de especialização?
+
+label.ERPTuitionInfoType.inactivate=Desactivar
+label.ERPTuitionInfoType.activate=Activar
+
+label.ERPTuitionInfoType.toogle.confirm=Confirma a alteração do estado (activo/inactivo) da configuração de especialização?
+label.ERPTuitionInfoType.enable.exportation.active=Ativar o lançamento e exportação de especializações.
+label.ERPTuitionInfoType.disable.exportation.active=Desactivar o lançamento e exportação de especializações.
+label.ERPTuitionInfoType.exportationActive.state=Lançamento e exportação de especializações activo?
+
+label.ERPTuitionInfoType.for.info.type.edition.disable.export=Para criar ou editar configurações deverá desativar o lançamento e exportação das especializações.
+label.ERPTuitionInfoType.for.exportation.enable.after.info.type.edition=Após a configuração das especializações deverá ativar o lançamento e exportação das especializações.
+
+
+error.ERPTuitionInfoType.degree.refering.in.degree.curricular.plans=Um dos planos curriculares adicionados é do seguinte curso: {0}
+error.ERPTuitionInfoType.degreeType.refering.in.degree.curricular.plans=Um dos planos curriculares adicionados é do seguinte tipo de curso: {0}
+error.ERPTuitionInfoType.degreeType.refering.in.degrees=Um dos cursos adicionados é do seguinte tipo de curso: {0}
+error.ERPTuitionInfoType.executionYear.required=O ano lectivo é obrigatório.
+error.ERPTuitionInfoType.tuitionProducts.required=É necessário adicionar produtos financeiros para o cálculo da especialização.
+error.ERPTuitionInfoType.erpTuitionProduct.required=O produto de especialização é obrigatório.
+error.ERPTuitionInfoType.academic.entries.required=São necessários dados curriculares.
+error.ERPTuitionInfoTypeEntry.for.one.tuition.type.only=Os dados curriculares apenas podem referir a um dos tipos de propina: matrícula, unidades curriculares isoladas ou unidades extracurriculares
+error.ERPTuitionInfoTypeEntry.degreeType.required=O tipo de curso é obrigatório.
+error.ERPTuitionInfoTypeEntry.degreeType.of.degree.not.match.assigned.degree.type=O curso difere do seu tipo de curso.
+error.ERPTuitionInfoTypeEntry.degree.of.degreeCurricularPlan.not.match.assigned.degree=O plano curricular difere do curso indicado.
+error.ERPTuitionInfoTypeEntry.degreeType.not.supported.for.standalone.or.extracurricular=As unidades curriculares isoladas ou unidades extracurriculares não suportam a indicação do tipo de curso.
+error.ERPTuitionInfoTypeAcademicEntry.entry.duplicated.for.degreeType=O tipo de curso está duplicado: {0}
+error.ERPTuitionInfoTypeAcademicEntry.entry.duplicated.for.degree=O curso está duplicado: {0}
+error.ERPTuitionInfoTypeAcademicEntry.entry.degreeType.of.degree.defined=O curso {0} já está englobado no tipo de curso {1}.
+error.ERPTuitionInfoTypeAcademicEntry.entry.duplicated.for.degreeCurricularPlan=O plano curricular está duplicado:  {0}
+error.ERPTuitionInfoTypeAcademicEntry.entry.degree.of.degreeCurricularPlan.defined=O plano curricular {0} está englobado no curso {1}
+error.ERPTuitionInfoTypeAcademicEntry.entry.degreeType.of.degreeCurricularPlan.defined=O plano curricular {0} está englobado no tipo de curso {1}
+error.ERPTuitionInfoTypeAcademicEntry.entry.duplicated.for.standalone=Entrada duplicada para as unidades curriculares isoladas.
+error.ERPTuitionInfoTypeAcademicEntry.entry.duplicated.for.extracurricular=Entrada duplicada para as unidades extra curriculares.
+error.ERPTuitionInfoType.TuitionPaymentPlanGroup.required.to.infer.academic.info=O tipo de propina é obrigatório. 
+error.ERPTuitionInfoType.erpTuitionProduct.already.defined=O produto de especialização indicado já está definido.
+error.ERPTuitionInfoType.delete.not.possible=Não é possível remover a configuração de especialização por já ter especializações lançadas.
+error.ERPTuitionInfoType.exportation.active=A exportação de especializações encontra-se ativa. Para proceder a configurações deverá inativar a exportação das especializações.
 
 # ERPTuitionInfoTypeAcademicEntry
 label.ERPTuitionInfoTypeAcademicEntry.standalone.description=Unidades curriculares isoladas
@@ -1185,11 +1261,11 @@ label.ERPTuitionInfo.pendingToExport=Pendente de exportação
 label.ERPTuitionInfo.exportationSuccess=Exportado com sucesso
 
 label.ERPTuitionInfo.creationDate=Data de criação
-label.ERPTuitionInfo.documentNumber=Nº
+label.ERPTuitionInfo.documentNumber=Nº Documento de Especialização
 label.ERPTuitionInfo.executionYear=Ano Lectivo
 label.ERPTuitionInfo.product=Propina
-label.ERPTuitionInfo.tuitionTotalAmount=Total
-label.ERPTuitionInfo.tuitionDeltaAmount=Diferença
+label.ERPTuitionInfo.tuitionTotalAmount=Especialização Resultante
+label.ERPTuitionInfo.tuitionDeltaAmount=Montante do documento
 label.ERPTuitionInfo.pendingToExport=Pendente
 label.ERPTuitionInfo.exportationSuccess=Sucesso
 label.ERPTuitionInfo.customer=Cliente
@@ -1212,6 +1288,7 @@ error.ERPTuitionInfo.executionYear.requireD=O ano lectivo é obrigatório.
 error.ERPTuitionInfo.erpTuitionInfoType.required=A especialização de propina é obrigatória.
 error.ERPTuitionInfo.event.define.some.of.the.products.of.type.but.not.all=O evento académico contêm pelo menos uma dívida não especificada na especialização: Nº {0}, Nome: {1}, Especialização: {2}
 error.ERPTuitionInfo.pending.to.export=O documento '{0}' encontra-se pendente. Este documento deverá ser integrado no ERP. 
+error.ERPTuitionInfo.exportation.active.disabled=O lançamento e exportação das especializações não está activo.
 
 label.ERPTuitionInfoExportOperation.fromDate=De
 label.ERPTuitionInfoExportOperation.toDate=A
