[UL-FD-865] Change column names related to open amount with interest and pending interest of debts report, and print an empty cell if a given debt is of code INTEREST

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -754,8 +754,8 @@ label.DebtReportEntryBean.header.debitEntry.identification=Ident. Dívida
 label.DebtReportEntryBean.header.creditedAmount= Montante acertado
 label.DebtReportEntryBean.header.amountToPay = Montante da dívida
 label.DebtReportEntryBean.header.openAmountToPay = Montante em aberto
-label.DebtReportEntryBean.header.openAmountWithInterest = Montante em aberto com juros
-label.DebtReportEntryBean.header.pendingInterestAmount = Montante de juros
+label.DebtReportEntryBean.header.openAmountWithInterestToDate = Montante em aberto c/ juros à data
+label.DebtReportEntryBean.header.pendingInterestAmount = Juros Pendentes
 label.DebtReportEntryBean.header.amountToCredit = Montante do acerto
 label.DebtReportEntryBean.header.openAmountToCredit = Montante em aberto
 label.DebtReportEntryBean.header.payorDebtAcount.vatNumber=Nº Fiscal Conta Pagadora
