Improve erp tuition info configuration interfaces

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1164,7 +1164,7 @@ label.ERPTuitionInfoProduct.update.title=Atualizar Produto de Especialização
 label.ERPTuitionInfoProduct.code=Código
 label.ERPTuitionInfoProduct.name=Designação
 
-label.ERPTuitionInfoProduct.delete.confirm=Deseja pagar o produto de especialização?
+label.ERPTuitionInfoProduct.delete.confirm=Deseja apagar o produto de especialização?
 
 error.ERPTuitionInfoProduct.cannot.delete=Não é possível remover o produto de especialização devido a configurações de especializações por ano lectivo.
 
@@ -1281,6 +1281,8 @@ label.ERPTuitionInfo.lastExportationLog=Log da última exportação
 label.ERPTuitionInfo.is.pending.to.export=Pendente de exportação
 label.ERPTuitionInfo.is.success.true=Sucesso
 label.ERPTuitionInfo.is.success.false=Anulado
+
+label.ERPTuitionInfo.tuitionProducts=Produtos de propina
 
 # ERPTuitionInfoExportOperation
 
