Refactor access control and bundle lookup

--- a/src/main/resources/resources/AcademicTreasuryResources_en.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_en.properties
@@ -55,3 +55,48 @@ label.CustomerAccounting.printpaymentplan=Print payment information
 # PaymentReferenceCode
 label.customer.PaymentReferenceCode.entity=Entity
 label.customer.PaymentReferenceCode.reference=Reference
+
+
+label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NAME=Serviço Académico
+label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NUMBER_YEAR=Nº do pedido
+label.AcademicTreasuryEventKeys.EXECUTION_YEAR=Ano Lectivo
+label.AcademicTreasuryEventKeys.EXECUTION_SEMESTER=Semestre
+label.AcademicTreasuryEventKeys.EVALUATION_SEASON=Época de avaliação
+label.AcademicTreasuryEventKeys.DETAILED=Discriminado
+label.AcademicTreasuryEventKeys.URGENT=Urgente
+label.AcademicTreasuryEventKeys.LANGUAGE=Lingua
+label.AcademicTreasuryEventKeys.BASE_AMOUNT=Montante base
+label.AcademicTreasuryEventKeys.UNITS_FOR_BASE=Nº unidades base
+label.AcademicTreasuryEventKeys.UNIT_AMOUNT=Montante da unidade adicional
+label.AcademicTreasuryEventKeys.ADDITIONAL_UNITS=Nº unidades adicionais
+label.AcademicTreasuryEventKeys.CALCULATED_UNITS_AMOUNT=Montante das unidades adicionais
+label.AcademicTreasuryEventKeys.PAGE_AMOUNT=Montante por página
+label.AcademicTreasuryEventKeys.NUMBER_OF_PAGES=Nº de páginas
+label.AcademicTreasuryEventKeys.CALCULATED_PAGES_AMOUNT=Montante das páginas
+label.AcademicTreasuryEventKeys.MAXIMUM_AMOUNT=Montante máximo
+label.AcademicTreasuryEventKeys.AMOUNT_WITHOUT_RATES=Montante sem taxas
+label.AcademicTreasuryEventKeys.FOREIGN_LANGUAGE_RATE=Taxa por tradução
+label.AcademicTreasuryEventKeys.CALCULATED_FOREIGN_LANGUAGE_RATE=Montante da taxa por tradução
+label.AcademicTreasuryEventKeys.URGENT_PERCENTAGE=Taxa por urgência
+label.AcademicTreasuryEventKeys.CALCULATED_URGENT_AMOUNT=Montante da taxa de urgência
+label.AcademicTreasuryEventKeys.FINAL_AMOUNT=Montante final
+label.AcademicTreasuryEventKeys.TUITION_CALCULATION_TYPE=Forma de cálculo
+label.AcademicTreasuryEventKeys.TUITION_PAYMENT_PLAN=Plano de propinas
+label.AcademicTreasuryEventKeys.TUITION_PAYMENT_PLAN_CONDITIONS=Condições do plano de propinas
+label.AcademicTreasuryEventKeys.TUITION_PAYOR_DEBT_ACCOUNT=Conta pagadora
+label.AcademicTreasuryEventKeys.FIXED_AMOUNT=Montante fixo
+label.AcademicTreasuryEventKeys.ECTS_CREDITS=Créditos ECTS
+label.AcademicTreasuryEventKeys.AMOUNT_PER_ECTS=Montante por ECTS
+label.AcademicTreasuryEventKeys.ENROLLED_COURSES=Nº de inscrições
+label.AcademicTreasuryEventKeys.AMOUNT_PER_COURSE=Montante por inscrição
+label.AcademicTreasuryEventKeys.DUE_DATE=Data de vencimento
+label.AcademicTreasuryEventKeys.DEGREE=Curso
+label.AcademicTreasuryEventKeys.DEGREE_CODE=Código do Curso
+label.AcademicTreasuryEventKeys.DEGREE_CURRICULAR_PLAN=Plano Curricular
+label.AcademicTreasuryEventKeys.ENROLMENT=Disciplina
+label.AcademicTreasuryEventKeys.FACTOR=Factor
+label.AcademicTreasuryEventKeys.TOTAL_ECTS_OR_UNITS=Total de Unidades ou ECTS por ano lectivo
+label.AcademicTreasuryEventKeys.COURSE_FUNCTION_COST=Custo de funcionamento da disciplina
+label.AcademicTreasuryEventKeys.DEFAULT_TUITION_TOTAL_AMOUNT=Total da propina principal
+label.AcademicTreasuryEventKeys.USED_DATE=Data usada para lançamento da dívida
+label.AcademicTreasuryEventKeys.EFFECTIVE_TUITION_PAYMENT_PLAN=Plano de propinas baseado
