--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1394,3 +1394,6 @@ label.ManageProductsForBlockAcademicalActs.addProducts.confirm.message=Serão adi
 label.ManageProductsForBlockAcademicalActs.removeProducts.confirm.title=Remover produtos para não bloquear atos académicos
 label.ManageProductsForBlockAcademicalActs.removeProducts.confirm.message.singular=Será removido 1 produto selecionado. Deseja continuar?
 label.ManageProductsForBlockAcademicalActs.removeProducts.confirm.message=Serão removidos {numberOfProducts} produtos selecionados. Deseja continuar?
+
+# TupleDataSourceBean
+label.TupleDataSourceBean.select.description=Seleccione uma opção
