--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,2 +1,4 @@
+- Copy whenProcessed property in MassiveDebtGenerationRequestFileDomainObject
+
 2.3.0 (03-06-2019)
 - Represent domain entity files as domain entities
