--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Upgrade fenixedu-treasury dependency
+
 2.3.1 (05-06-2019)
 - Copy whenProcessed property in MassiveDebtGenerationRequestFileDomainObject
 
