--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,5 @@
-- Upgrade fenixedu-treasury dependency
+- Refactor: Upgrade fenixedu-academic-core dependency
+- Refactor: Upgrade fenixedu-treasury dependency
 
 2.3.1 (05-06-2019)
 - Copy whenProcessed property in MassiveDebtGenerationRequestFileDomainObject
