--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug fix: Set academic information in report beans for target treasury event associated debts and payments
+
 2.3.2 (26-06-2019)
 - Refactor: Upgrade fenixedu-academic-core dependency
 - Refactor: Upgrade fenixedu-treasury dependency
