--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Changes in payment reference code generation API due to Online Payments Gateway integration in fenixedu-treasury module
+
 2.4.0 (12-07-2019)
 - Refactor: Rename treasury domain file entities to their original class name
 
