--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Update fenixedu-treasury dependency version
+
 2.5.0 (18-07-2019)
 - Refactor: Changes in payment reference code generation API due to Online Payments Gateway integration in fenixedu-treasury module
 
