--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Upgrade fenixedu-academic-core dependency
+
 2.5.2 (23-07-2019)
 - Refactor: Delete AcademicTreasuryBootstrap, update dependency fenixedu-treasury version 
 
