Write region on saving address     Validate customer information     improve presentation of fiscal address     Fix address country code from person instance     Change fiscal data functionality on existing customer     Save fiscal address only when available     Academic Treasury service to save address details in customer     Register fiscal address country along with fiscal country     Copy fiscal address information on inactivate customer

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+- Refactor: Save fiscal address from Person in Customer address fields
+- Refactor: Deprecate fiscal country, instead fiscal address country is used and saved in Customer
+
 2.5.3 (26-07-2019)
 - Refactor: Upgrade fenixedu-academic-core dependency
 
