- Refactor: Fix presentation labels in pages. Revert degree presentation name to print it with default locale.

--- a/src/main/resources/resources/AcademicTreasuryResources_en.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_en.properties
@@ -102,3 +102,16 @@ label.AcademicTreasuryEventKeys.COURSE_FUNCTION_COST=Custo de funcionamento da d
 label.AcademicTreasuryEventKeys.DEFAULT_TUITION_TOTAL_AMOUNT=Total da propina principal
 label.AcademicTreasuryEventKeys.USED_DATE=Data usada para lançamento da dívida
 label.AcademicTreasuryEventKeys.EFFECTIVE_TUITION_PAYMENT_PLAN=Plano de propinas baseado
+
+#TuitionPaymentPlan
+label.TuitionPaymentPlan.paymentPlanName=Tuition for {0} ({1})
+label.TuitionPaymentPlan.defaultPaymentPlan=Default Payment Plan
+
+# TuitionDebtCreationBean
+label.TuitionDebtCreationBean.enrolments.one=(1 inscrição)
+label.TuitionDebtCreationBean.enrolments=({0} inscrições)
+
+# TuitionInstallmentTariff
+label.TuitionInstallmentTariff.debitEntry.name.registration={0}º Prestação da Propina em {1} ({2})
+label.TuitionInstallmentTariff.debitEntry.name.standalone={0}º Prestação da Propina em Unidades Curriculares Isoladas ({1} - {2})
+label.TuitionInstallmentTariff.debitEntry.name.extracurricular={0}º Prestação da Propina em Unidades Extracurriculares ({1} - {2})
