--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Improvement: On creating academic debts, Add to registration designation the protocol and registration start date, in order to distinguish two registration with same degree
+
 4.0.0 (07-08-2019)
 - Refactor: Associate finantial entity to an unit, beside administrative office
 - Refactor: Use default locale academic entities methods to retrieve designation
