- Fix: 1A1V document with tuitions

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Fix: 1A1V document with tuitions
+
 4.0.1 (30-08-2019)
 - Improvement: On creating academic debts, Add to registration designation the protocol and registration start date, in order to distinguish two registration with same degree
 
