--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: In aligning due date in academic debt generation, do nothing if the best due date is not found instead of throwing an exception
+
 4.0.2 (04-09-2019)
 - Fix: 1A1V document with tuitions
 
