- Bug Fix: Use enrolment date in execution year, instead of current date for entry date of academic tax debts - Improvement: Print error in creating debt account in log, in registration creation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1189,6 +1189,7 @@ label.ERPTuitionInfoProduct.name=Designação
 label.ERPTuitionInfoProduct.delete.confirm=Deseja apagar o produto de especialização?
 
 error.ERPTuitionInfoProduct.cannot.delete=Não é possível remover o produto de especialização devido a configurações de especializações por ano lectivo.
+error.ERPTuitionInfoProduct.code.not.unique=Já existe um produto de especialização com o código especificado.
 
 # ERPTuitionInfoType
 label.ERPTuitionInfoType.title=Configurações de Especializações por Ano Lectivo
@@ -1591,3 +1592,5 @@ error.ProductImporterStrategy.vatExemptionReason.invalid = Linha {0}: O motivo d
 error.ProductImporterStrategy.finantialInstitution.required = Linha {0}: A instituição financeira é obrigatório.
 error.ProductImporterStrategy.finantialInstitution.invalid = Linha {0}: A instituição financeira <strong>{1}</strong> é inválida.
 
+error.RegistrationServices.createPersonCustomer.fiscalInformation.required=O aluno não tem todos os dados fiscais preenchidos para a criação do cliente: {0}
+ 
