- New Fixture: Create payment reference code for interest debit entries

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -546,6 +546,8 @@ label.AcademicDebtGenerationRule.background.not.executed=Executado apenas a pedi
 label.AcademicDebtGenerationRule.academicTaxDueDateAlignmentType=Uniformizar data de vencimento de taxas académicas
 label.AcademicDebtGenerationRule.debtGenerationRuleRestriction=Restrição
 label.AcademicDebtGenerationRule.eventDebitEntriesMustEqualRuleProducts=Garantir a agregação de todas as dívidas do mesmo evento académico
+label.AcademicDebtGenerationRule.appliedMinimumAmountForPaymentCode=Aplicar montante mínimo para referência
+label.AcademicDebtGenerationRule.minimumAmountForPaymentCode=Montante mínimo para referência
 
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
@@ -590,6 +592,8 @@ error.AcademicDebtGenerationRule.paymentCodePool.required=A Pool Referências MB 
 error.AcademicDebtGenerationRuleEntry.createDebt.only.supported.for.tuition.or.academicTax=A criação de dívida só é suportada em propinas ou taxas académicas
 
 error.AcademicDebtGenerationRule.create.missing.required.fields = Existem campos obrigatórios por preencher
+error.AcademicDebtGenerationRule.create.appliedMinimumAmountForPaymentCode.but.minimumAmountForPaymentCode.not.valid=O montante mínimo para referência é inválido
+error.AcademicDebtGenerationRule.minimumAmountForPaymentCode.invalid=O montante mínimo para referência é inválido
 
 label.AcademicDebtGenerationRule.active.message=[ACTIVO]
 label.AcademicDebtGenerationRule.inactive.message=[INACTIVO]
