--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- New Fixture: Create payment reference code for interest debit entries
+
 4.0.5 (18-09-2019)
 - Refactor: Add isSuccess() to return getSuccess() of type boolean
 
