--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: upgraded fenixedu-academic-core
+
 4.1.0 (18-09-2019)
 - New Fixture: Create payment reference code for interest debit entries
 
