--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: Throw expcetion if academic tariff is not found when creating academic debt associated with tresury event target
+
 4.2.0 (26-09-2019)
 - Refactor: upgraded fenixedu-academic-core
 
