Refactor: removed ExecutionSemester reference in dml Refactor: updated academic-core module dependency

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+- Refactor: removed ExecutionSemester reference in dml
+- Refactor: updated academic-core module dependency
+
 4.4.0 (04-12-2019)
 - New Fixture: MBWay payments interface
 
