--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: API for debt creation for IAcademicTreasuryTarget along with treasury domain entities instead of interfaces
+
 4.4.2 (09-01-2020)
 - Refactor: Clean references for getCountryCode() method which is deprecated, replaced by getAddressCountryCode()
 
