--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Replaced semester references by childOrder
+
 4.4.3 (14-01-2020)
 - Refactor: API for debt creation for IAcademicTreasuryTarget along with treasury domain entities instead of interfaces
 
