--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -895,6 +895,7 @@ label.PaymentReportEntryBean.header.creationDate = Data de criação
 label.PaymentReportEntryBean.header.responsible = Responsável
 label.PaymentReportEntryBean.header.settlementNoteNumber = Documento
 label.PaymentReportEntryBean.header.settlementNoteDocumentDate = Data do documento
+label.PaymentReportEntryBean.header.settlementOriginDocumentNumber=Nº documento de origem
 label.PaymentReportEntryBean.header.paymentDate = Data de pagamento 
 label.PaymentReportEntryBean.header.settlementNoteAnnuled = Doc. anulado
 label.PaymentReportEntryBean.header.documentExportationPending = Pendente de exportação
