- Improvement: In payment with credit card with SIBS OPPWA, select one of the registered addresses to send to SIBS

--- a/src/main/resources/resources/AcademicTreasuryResources_en.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_en.properties
@@ -115,3 +115,14 @@ label.TuitionDebtCreationBean.enrolments=({0} inscrições)
 label.TuitionInstallmentTariff.debitEntry.name.registration={0}º Prestação da Propina em {1} ({2})
 label.TuitionInstallmentTariff.debitEntry.name.standalone={0}º Prestação da Propina em Unidades Curriculares Isoladas ({1} - {2})
 label.TuitionInstallmentTariff.debitEntry.name.extracurricular={0}º Prestação da Propina em Unidades Extracurriculares ({1} - {2})
+
+#SibsOnlinePaymentsGatewayForwardPaymentController
+error.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Please select one address to continue the payment
+label.SibsOnlinePaymentsGatewayForwardPaymentController.addressCountry=Address Country
+label.SibsOnlinePaymentsGatewayForwardPaymentController.address=Address
+label.SibsOnlinePaymentsGatewayForwardPaymentController.city=City / Region
+label.SibsOnlinePaymentsGatewayForwardPaymentController.zipCode=Zip Code
+label.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Choose one address
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.title=Choose address for 3D Secure validation
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text=The chosen address will be sent to SIBS for validation of this operation by the 3D Secure protocol. We advise that this address is similar to the address registered in your bank institution.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text2=If your address is incorrect or incomplete, fill it in portal Pessoal, menu Personal Area > Information.
