--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Improvement: In payment with credit card with SIBS OPPWA, select one of the registered addresses to send to SIBS
+
 4.4.6 (12-02-2020)
 - Bug Fix: Consider academic service request service mapping entry additional description in debit entry creation
 - Improvement: Add settlement origin document number in reports
