--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1598,4 +1598,15 @@ error.ProductImporterStrategy.finantialInstitution.required = Linha {0}: A insti
 error.ProductImporterStrategy.finantialInstitution.invalid = Linha {0}: A instituição financeira <strong>{1}</strong> é inválida.
 
 error.RegistrationServices.createPersonCustomer.fiscalInformation.required=O aluno não tem todos os dados fiscais preenchidos para a criação do cliente: {0}
- 
+
+
+#SibsOnlinePaymentsGatewayForwardPaymentController
+error.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Para continuar selecione uma morada
+label.SibsOnlinePaymentsGatewayForwardPaymentController.addressCountry=País da Morada
+label.SibsOnlinePaymentsGatewayForwardPaymentController.address=Morada
+label.SibsOnlinePaymentsGatewayForwardPaymentController.city=Concelho / Cidade
+label.SibsOnlinePaymentsGatewayForwardPaymentController.zipCode=Código Postal
+label.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Selecione uma morada
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.title=Selecionar morada para validação 3D Secure
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text=A morada aqui escolhida será enviada à SIBS na validação desta operação pelo protocolo 3D Secure, pelo que recomendamos que seja similar à registada na sua instituição bancária.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text2=Caso a sua morada esteja incompleta ou errada, deverá corrigi-la no portal Pessoal, menu Área Pessoal > Informação.
