--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Improvement: SIBS OPPWA: default address fields
+
 4.4.7 (27-02-2020)
 - Improvement: In payment with credit card with SIBS OPPWA, select one of the registered addresses to send to SIBS
 
