--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,6 @@
 - Improvement: SIBS OPPWA: default address fields
 - Bug Fix: In Person delete listener, delete the active person customer if defined
+- Improvement: Show registration ingression date and registration protocol in automatic debt creation interface 
 
 4.4.7 (27-02-2020)
 - Improvement: In payment with credit card with SIBS OPPWA, select one of the registered addresses to send to SIBS
