- Improvement: Add degreeType, degreeCode, degreeName and executionYear to settlement entries report

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -888,6 +888,10 @@ label.SettlementReportEntryBean.header.email = Email
 label.SettlementReportEntryBean.header.address = Morada
 label.SettlementReportEntryBean.header.studentNumber = Nº aluno
 label.SettlementReportEntryBean.header.closeDate=Data de fecho
+label.SettlementReportEntryBean.header.degreeType=Tipo de Curso
+label.SettlementReportEntryBean.header.degreeCode=Cód. Curso
+label.SettlementReportEntryBean.header.degreeName=Curso
+label.SettlementReportEntryBean.header.executionYear=Ano lectivo
 
 # PaymentReportEntryBean
 label.PaymentReportEntryBean.header.identification = Identificador
