- Bug Fix: SIBS OPPWA: Access payment card widget with POST, after selecting address. Ensure the SIBS Merchant Transaction Detail is not rewritten.

--- a/src/main/resources/resources/AcademicTreasuryResources_en.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_en.properties
@@ -118,6 +118,8 @@ label.TuitionInstallmentTariff.debitEntry.name.extracurricular={0}º Prestação da
 
 #SibsOnlinePaymentsGatewayForwardPaymentController
 error.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Please select one address to continue the payment
+error.SibsOnlinePaymentsGatewayForwardPaymentController.invalid.state.restart.process.again.01=01: The payment request is now invalid. Please start the payment again in your debt account.
+error.SibsOnlinePaymentsGatewayForwardPaymentController.invalid.state.restart.process.again.02=02: The payment request is now invalid. Please start the payment again in your debt account.
 label.SibsOnlinePaymentsGatewayForwardPaymentController.addressCountry=Address Country
 label.SibsOnlinePaymentsGatewayForwardPaymentController.address=Address
 label.SibsOnlinePaymentsGatewayForwardPaymentController.city=City / Region
