--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1606,6 +1606,8 @@ error.RegistrationServices.createPersonCustomer.fiscalInformation.required=O alu
 
 #SibsOnlinePaymentsGatewayForwardPaymentController
 error.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Para continuar selecione uma morada
+error.SibsOnlinePaymentsGatewayForwardPaymentController.invalid.state.restart.process.again.01=01: Este pedido de pagamento é inválido. Inicie novamente o pagamento a partir da conta corrente.
+error.SibsOnlinePaymentsGatewayForwardPaymentController.invalid.state.restart.process.again.02=02: Este pedido de pagamento é inválido. Inicie novamente o pagamento a partir da conta corrente.
 label.SibsOnlinePaymentsGatewayForwardPaymentController.addressCountry=País da Morada
 label.SibsOnlinePaymentsGatewayForwardPaymentController.address=Morada
 label.SibsOnlinePaymentsGatewayForwardPaymentController.city=Concelho / Cidade
@@ -1614,3 +1616,5 @@ label.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Selecione
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.title=Selecionar morada para validação 3D Secure
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text=A morada aqui escolhida será enviada à SIBS na validação desta operação pelo protocolo 3D Secure, pelo que recomendamos que seja similar à registada na sua instituição bancária.
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text2=Caso a sua morada esteja incompleta ou errada, deverá corrigi-la no portal Pessoal, menu Área Pessoal > Informação.
+
+
