--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -2,6 +2,7 @@
 - Bug Fix: In Person delete listener, delete the active person customer if defined
 - Improvement: Show registration ingression date and registration protocol in automatic debt creation interface 
 - Improvement: Add degreeType, degreeCode, degreeName and executionYear to settlement entries report
+- Bug Fix: SIBS OPPWA: Access payment card widget with POST, after selecting address. Ensure the SIBS Merchant Transaction Detail is not rewritten.
 
 4.4.7 (27-02-2020)
 - Improvement: In payment with credit card with SIBS OPPWA, select one of the registered addresses to send to SIBS
