--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Upgrade parent artifact id version
+
 4.4.8 (09-03-2020)
 - Improvement: SIBS OPPWA: default address fields
 - Bug Fix: In Person delete listener, delete the active person customer if defined
