--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: To split fenixedu-treasury module in domain and ui module, change IForwardPaymentController package
+
 4.4.9 (17-03-2020)
 - Refactor: Upgrade parent artifact id version
 
