--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Remove monthly interest calculation's configuration from the tuition and academic tariffs
+
 4.5.1 (04-04-2020)
 - Refactor: Upgraded dependency of fenixedu-academic-core (removal of organizational Units subclasses)
 
