--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Setting the debit note due date with the maximum due date of debit entries is performed in the debit note close operation
+
 4.6.0 (06-04-2020)
 - Refactor: Remove monthly interest calculation's configuration from the tuition and academic tariffs
 
