--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -562,7 +562,7 @@ label.AcademicDebtGenerationRuleEntry.toCreateAfterLastRegistrationStateDate=Cri
 label.AcademicDebtGenerationRule.rules=Regras
 label.AcademicDebtGenerationRuleEntry.degreeType=Tipo de Curso
 label.AcademicDebtGenerationRuleEntry.degreeCurricularPlan=Plano Curricular
-label.AcademicDebtGenerationRuleEntry.forceCreation=Forçar criação
+label.AcademicDebtGenerationRuleEntry.forceCreation=Criar dívida sem haver inscrições
 label.AcademicDebtGenerationRuleEntry.limitToRegisteredOnExecutionYear=Limitar a matrículas 1º Ano 1º Vez
 
 label.AcademicDebtGenerationRule.chooseType=Escolher Tipo de Regra
